--- a/app/views/queries/_view_options.rhtml
+++ b/app/views/queries/_view_options.rhtml
@@ -1,6 +1,8 @@
 <% query.view_options.each_key do |voption| -%>
-  <%= query.caption_for_view_option( voption) %>:
-  <%= select_tag( "view_options[#{voption}]",
-		  options_for_select( query.values_for_view_option( voption),
-				      query.view_options[voption])) %>
+  <tr>
+    <td><%= query.caption_for_view_option( voption) %></td>
+    <td><%= select_tag( "view_options[#{voption}]",
+      options_for_select( query.values_for_view_option( voption),
+      query.view_options[voption])) %></td>
+  </tr>
 <% end %>
